--- a/src/app/add-product-dialog/add-product-dialog.component.html
+++ b/src/app/add-product-dialog/add-product-dialog.component.html
@@ -35,3 +35,8 @@
     <textarea matInput></textarea>
   </mat-form-field>
 </div>
+<div mat-dialog-actions [align]="'end'">
+  <button mat-raised-button color="warn" mat-dialog-close>Close</button>
+  <button mat-raised-button color="primary">Save</button>
+
+</div>
