--- a/src/app/add-product-dialog/add-product-dialog.component.html
+++ b/src/app/add-product-dialog/add-product-dialog.component.html
@@ -39,6 +39,6 @@
 </div>
 <div mat-dialog-actions [align]="'end'">
   <button mat-raised-button color="warn" mat-dialog-close>Close</button>
-  <button mat-raised-button color="primary" (click)="addProcuct()">Save</button>
+  <button mat-raised-button color="primary" (click)="addProduct()">Save</button>
 
 </div>
