--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -57,7 +57,7 @@
         <ng-container matColumnDef="action">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Action </th>
           <td mat-cell *matCellDef="let row">
-            <button mat-icon-button color="primary">
+            <button (click)="editProduct(row)" mat-icon-button color="primary">
               <mat-icon>edit</mat-icon>
             </button>
             <button mat-icon-button color="warn">
